--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
   "scripts": {
     "build": "tsc",
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --inspect --ignore-watch node_modules src/server.ts",
-    "test:unit": "ENV_FILE=./config/.env.test jest"
+    "test:unit": "ENV_FILE=./config/.env.test jest",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^26.6.3",
-    "supertest": "^6.1.1"
+    "pg": "^8.5.1",
+    "supertest": "^6.1.1",
+    "typeorm": "^0.2.31"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
