--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "date-fns": "^2.17.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^26.6.3",
     "pg": "^8.5.1",
     "supertest": "^6.1.1",
-    "typeorm": "^0.2.31"
+    "typeorm": "^0.2.31",
+    "uuidv4": "^6.2.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
