--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "date-fns": "^2.17.0",
     "dotenv": "^8.2.0",
@@ -24,6 +25,7 @@
     "uuidv4": "^6.2.6"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.22",
