--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^26.6.3",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.1.1",
@@ -28,6 +29,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.22",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
