--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.17.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
@@ -29,9 +30,9 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
-    "@types/multer": "^1.4.5",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/multer": "^1.4.5",
     "@types/node": "^14.14.22",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
