--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,17 @@
     "no-useless-constructor": "off",
     "no-unused-vars": "off",
     "camelcase": "off",
+    "@typescript-eslint/naming-convention": [
+      "error",
+      {
+        "selector": "interface",
+        "format": ["PascalCase"],
+        "custom": {
+          "regex": "^I[A-Z]",
+          "match": true
+        }
+      }
+    ],
     "@typescript-eslint/no-unused-vars": [
       "warn",
       {
