refactor: updating architectures to not be directly dependent on typeorm

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,7 +5,10 @@
   "username": "postgres",
   "password": "postgres",
   "database": "gobarber",
-  "entities": ["./src/models/*.ts"],
+  "entities": [
+    "./src/modules/appointments/infra/typeorm/entities/*.ts",
+    "./src/modules/users/infra/typeorm/entities/*.ts"
+  ],
   "migrations": ["./src/shared/infra/typeorm/migrations/*.ts"],
   "cli": {
     "migrationsDir": "./src/shared/infra/typeorm/migrations"
