chore: fixed express request customization issue to add user to request object during authentication middleware, updated typscript and @types/node package and added and added nodemailer package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
       "@shared/*": ["shared/*"],
       "@config/*": ["config/*"]
     },
-    "typeRoots": ["./src/@types"],
+    "typeRoots": ["./@types", "./node_modules/@types"],
     "types": ["@types/jest"],
     "esModuleInterop": true,
     "experimentalDecorators": true,
