--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,13 +1,24 @@
-{
-  "type": "postgres",
-  "host": "database.ctopr8ko7wx5.us-east-1.rds.amazonaws.com",
-  "port": 5432,
-  "username": "postgres",
-  "password": "postgres",
-  "database": "gobarber",
-  "entities": ["./src/modules/**/infra/typeorm/entities/*.ts"],
-  "migrations": ["./src/shared/infra/typeorm/migrations/*.ts"],
-  "cli": {
-    "migrationsDir": "./src/shared/infra/typeorm/migrations"
+[
+  {
+    "name": "default",
+    "type": "postgres",
+    "host": "database.ctopr8ko7wx5.us-east-1.rds.amazonaws.com",
+    "port": 5432,
+    "username": "postgres",
+    "password": "postgres",
+    "database": "gobarber",
+    "entities": ["./src/modules/**/infra/typeorm/entities/*.ts"],
+    "migrations": ["./src/shared/infra/typeorm/migrations/*.ts"],
+    "cli": {
+      "migrationsDir": "./src/shared/infra/typeorm/migrations"
+    }
+  },
+  {
+    "name": "mongodb",
+    "type": "mongodb",
+    "host": "cluster0.pdae3.mongodb.net/gobarber",
+    "useUnifiedTopology": true,
+    "useNewUrlParser": true,
+    "entities": ["./src/modules/**/infra/typeorm/schemas/*.ts"]
   }
-}
+]
