--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "celebrate": "^14.0.0",
     "date-fns": "^2.17.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
