chore: including env variables and class-transformer to remove password from objects before returning to the frontend

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "types": ["@types/jest"],
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "allowJs": true
   }
 }
