--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "celebrate": "^14.0.0",
+    "class-transformer": "^0.4.0",
     "date-fns": "^2.17.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/hapi__joi": "^17.1.6",
     "@types/jest": "^26.0.20",
