chore: included SES mail provider and added environment variables for aws

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,15 @@
+# APPLICATION
 PORT=3333
 PORT_WEB=3000
 NODE_ENV='development'
 APP_SECRET=
+APP_API_URL=http://localhost
 APP_WEB_URL=http://localhost
+
+# MAIL
+MAIL_DRIVER=ETHEREAL
+
+# AWS CREDENTIALS
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
