--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "aws-sdk": "^2.882.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "celebrate": "^14.0.0",
@@ -43,7 +44,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.6.11",
     "@types/multer": "^1.4.5",
-    "@types/node": "^14.14.31",
+    "@types/node": "^14.14.37",
     "@types/nodemailer": "^6.4.0",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
