--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
+    "ioredis": "^4.26.0",
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.5.2",
     "mongodb": "^3.6.5",
     "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
@@ -40,6 +42,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/hapi__joi": "^17.1.6",
+    "@types/ioredis": "^4.22.3",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.6.11",
