--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,8 @@ MAIL_DRIVER=ETHEREAL
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
+
+# REDIS
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASS=
