--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
     "pg": "^8.5.1",
+    "rate-limiter-flexible": "^2.2.1",
+    "redis": "^3.1.0",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.1.1",
     "tsyringe": "^4.4.0",
@@ -49,6 +51,7 @@
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.37",
     "@types/nodemailer": "^6.4.0",
+    "@types/redis": "^2.8.28",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
